src/objects/WIN__c.object
<CustomObject>
    <fields>
        <fullName>AC_Date_Contract_Recorded__c</fullName>
        <label>AC Date Contract Recorded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AC_Total_US_Export_Content__c</fullName>
        <description>AC US Goods plus AC US Services.</description>
        <formula>Advocacy_US_Export_Content_Goods__c +  Advocacy_US_Export_Content_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AC Total US Export Content</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AC_WIN_Summary__c</fullName>
        <label>AC WIN Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>This field will display the actual creation date for records from CTS/ITA Central/Salesforce. Use this field for FY 15&apos; reporting</inlineHelpText>
        <label>Actual Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_WIN_Features__c</fullName>
        <label>Additional WIN Features</label>
        <picklist>
            <picklistValues>
                <fullName>E-Award Winner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Achievement Certificate Recipient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woman-Owned Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minority-Owned Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran-Owned</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Advocacy_Date_Contract_Signed__c</fullName>
        <inlineHelpText>Date foreign government signed the procurement contract.</inlineHelpText>
        <label>AC Date Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advocacy_Total_Project_Value__c</fullName>
        <inlineHelpText>The total dollar amount of the awarded contract.</inlineHelpText>
        <label>AC Total Project Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advocacy_Total_US_Export_Content__c</fullName>
        <inlineHelpText>The total value of any exports related to the contract award.</inlineHelpText>
        <label>Advocacy Total US Export Content</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advocacy_US_Export_Content_Goods__c</fullName>
        <inlineHelpText>The value of U.S. Export Content (Goods) related to the contract award.</inlineHelpText>
        <label>AC US Export Content (Goods)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advocacy_US_Export_Content_Services__c</fullName>
        <inlineHelpText>The value of U.S. Export Content (Services) related to the contract award.</inlineHelpText>
        <label>AC US Export Content (Services)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Narrative_FTA__c</fullName>
        <label>Approved Narrative FTA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Narrative__c</fullName>
        <label>Approved Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTS_ID__c</fullName>
        <description>Legacy CTS ID of Incident, Advocacy, or CDS</description>
        <label>CTS ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS_Org_ID__c</fullName>
        <description>Legacy CTS Organization ID</description>
        <label>CTS Org ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Year_of_Results__c</fullName>
        <description>Auto-populate on the date the WIN was created.  Can be updated</description>
        <label>Calendar Year of Results</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clearance_Notes__c</fullName>
        <label>Clearance Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cleared_For__c</fullName>
        <label>Cleared For</label>
        <picklist>
            <picklistValues>
                <fullName>Press Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speeches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send to Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client willing to speak to  media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOC/ITA websites and social media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach by TPCC Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined to clear</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cleared_Until__c</fullName>
        <inlineHelpText>Select a Date 1 or 2 years from the WIN date.</inlineHelpText>
        <label>Cleared Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Cleared__c</fullName>
        <label>Date Client Cleared</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to indicate that the contact entered above has verified all essential facts of this WIN.</inlineHelpText>
        <label>Client Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact Name should be limited to those who are associated with the organization related. Due to issue with filtered lookups in publisher actions, this filter is removed until issue is resolved.</description>
        <inlineHelpText>Be sure to select a contact associated to this organization.</inlineHelpText>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact must be a contact of the associated WIN organization.</errorMessage>
            <filterItems>
                <field>$Source.Organization__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <infoMessage>Contact must be a contact of the associated WIN organization.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WINs</relationshipLabel>
        <relationshipName>WINs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_AccountName_to_Text__c</fullName>
        <description>This field is used to store the Account Name so that in global search WIN record will get populated based on AccountName</description>
        <label>Copy AccountName to Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Contact_Email__c</fullName>
        <label>Copy Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_WIN_Contact_Text__c</fullName>
        <label>Copy WIN Contact Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_in_Win__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Country in Win</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_of_Objectives_Met__c</fullName>
        <label>Client Objectives</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Results__c</fullName>
        <inlineHelpText>For example Sales Revenue, signed distributor/partner agreements or other significant positive outcomes.</inlineHelpText>
        <label>Description of Results</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EP_Impact_of_Exporting__c</fullName>
        <inlineHelpText>Impact of Exporting on the Ability of the Company to Grow, Hire, and Retain Jobs.</inlineHelpText>
        <label>EP Impact of Exporting</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EP__c</fullName>
        <description>dummy field</description>
        <inlineHelpText>Impact of Exporting on the Ability of the Company to Grow, Hire, and Retain Jobs</inlineHelpText>
        <label>EP Impact Narrative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTA_Prospects__c</fullName>
        <inlineHelpText>Ask client if FTAs will help their export prospects, and if so, how.</inlineHelpText>
        <label>FTA Prospects</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will be your second approver</inlineHelpText>
        <label>Final Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WINs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Line_Approval_Date__c</fullName>
        <label>Final Line Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Line_Approval__c</fullName>
        <label>Final Line Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Line_Approver__c</fullName>
        <defaultValue>$User.ManagerId</defaultValue>
        <label>Final Line Approver</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will be your first approver</inlineHelpText>
        <label>First Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WINs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Line_Approval_Date__c</fullName>
        <label>First Line Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Line_Approval__c</fullName>
        <label>First Line Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Line_Approver__c</fullName>
        <defaultValue>$User.ManagerId</defaultValue>
        <label>First Line Approver</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Inv_Amount_est__c</fullName>
        <inlineHelpText>The estimated dollar amount of the investment for the U.S. locale.</inlineHelpText>
        <label>SUSA Inv. Amount(est)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IP_Inv_Announcement_Date__c</fullName>
        <inlineHelpText>The date the investment award was announced.</inlineHelpText>
        <label>SUSA Inv. Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IP_Inv_Location_Congressional_District__c</fullName>
        <inlineHelpText>This can be different than the Congressional District on the Organization record.</inlineHelpText>
        <label>SUSA Inv. Location Congressional Distr.</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Inv_Location__c</fullName>
        <inlineHelpText>The location (City, State) of the announced investment.</inlineHelpText>
        <label>SUSA Inv. Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Jobs_Created_est__c</fullName>
        <inlineHelpText>The estimated number of new jobs created based on the investment.</inlineHelpText>
        <label>SUSA Jobs Created(est)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Jobs_Retained_est__c</fullName>
        <inlineHelpText>The estimated number of retained jobs created based on the investment.</inlineHelpText>
        <label>SUSA Jobs Retained(est)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Press_News_Release__c</fullName>
        <inlineHelpText>Web links to new releases announcing the investment (can be numerous).</inlineHelpText>
        <label>SUSA Press/News Release</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_Zip_4__c</fullName>
        <inlineHelpText>Zip+4</inlineHelpText>
        <label>SUSA Zip+4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_of_Exporting__c</fullName>
        <inlineHelpText>Impact of Exporting on the ability of the company to grow, hire, and retain jobs.</inlineHelpText>
        <label>Impact (Especially Jobs/Revenue)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Includes_Multiple_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Multiple Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Rollup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Industry Win Rollup</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Comment__c</fullName>
        <description>ITA Comments about the WIN.</description>
        <label>Internal Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Links_to_Additional_Cases__c</fullName>
        <label>Links to Additional Cases</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Assistance Provided</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OPA_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPA Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Principle Associated Organization to the WIN</inlineHelpText>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WINs</relationshipLabel>
        <relationshipName>WINs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_USG_Entities_Involved__c</fullName>
        <description>Other TPCC Entities Involved
Other USG Entities Involved
Other Government entities that were involved with the WIN.</description>
        <inlineHelpText>This list includes all Trade Promotion Coordinating Committee (TPCC) Agencies.</inlineHelpText>
        <label>Other USG Entities Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bureau of Economic Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bureau of Industry and Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council of Economic Advisors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Development Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics and Statistics Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Protection Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export-Import Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Human Services Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeland Security Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millennium Challenge Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minority Business Development Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Security Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Technical Information Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Management and Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of the U.S. Trade Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Private Investment Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasury Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USAID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Census Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Patent and Trademark Office</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Owner_Office__c</fullName>
        <description>Owner:User.00Nr0000000FhOz</description>
        <formula>TEXT(Owner:User.RH_Lev_6_Office__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Outcome__c</fullName>
        <label>Primary Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance with trade agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilitated export transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced/Eliminated threat to US business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced/Removed/Prevented trade barrier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Testimonial__c</fullName>
        <description>Text obtained from the client about the WIN or assistance provided by ITA.</description>
        <inlineHelpText>Senior executives preferred.</inlineHelpText>
        <label>Quote/Testimonial</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Cases_to_WIN_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Related Cases to WIN Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Countries_Text__c</fullName>
        <label>Related Countries Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Countries__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Countries</label>
        <referenceTo>RelatedCountries__c</referenceTo>
        <relationshipLabel>WINs</relationshipLabel>
        <relationshipName>WINs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_WIN_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When record is created in error.</inlineHelpText>
        <label>Request WIN Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewedByOPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed By OPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sensitive_Attachment_Links__c</fullName>
        <label>Sensitive Attachment Links</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SharePoint_ID__c</fullName>
        <description>Legacy SharePoint record ID</description>
        <label>SharePoint ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_Org_Name__c</fullName>
        <description>Legacy SharePoint Organization Name</description>
        <label>SharePoint Organization Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Product__c</fullName>
        <inlineHelpText>Describes the type of products associated with the WIN.</inlineHelpText>
        <label>Specific Product</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verify_Validate__c</fullName>
        <inlineHelpText>By entering my name, I verify that all essential facts are validated.</inlineHelpText>
        <label>Verify/Validate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIN_18_ID__c</fullName>
        <description>Added object for reporting purposes, returns casesafe ID.  Not visible on Page Layouts.</description>
        <formula>Casesafeid(Id)</formula>
        <label>WIN 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIN_Contributors_Rollup__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Is used to store the rollup value from the Win Contributor object for a particular win object.</description>
        <label>WIN Contributors Rollup</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WIN_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Effective Date of the WIN</inlineHelpText>
        <label>WIN Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WIN_Name__c</fullName>
        <displayFormat>WIN-{0000}</displayFormat>
        <label>WIN Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>WIN_One__c</fullName>
        <description>Added to all objects for reporting purposes, Power of One concept.  Not visible on Page Layouts.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WIN One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WIN_Title__c</fullName>
        <label>WIN Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIN_Type_Selector__c</fullName>
        <description>Used for publisher action on Org to create WIN</description>
        <label>WIN Type Selector</label>
        <picklist>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Diplomacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import Promotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WIN_Type__c</fullName>
        <label>WIN Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Diplomacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Promotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>WIN</label>
    <listViews>
        <fullName>All_Open_WINs</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>WIN_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_WIN_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Final_Line_Approval_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Open WINs</label>
    </listViews>
    <listViews>
        <fullName>All_WINs</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>WIN_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_WIN_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All WINs</label>
    </listViews>
    <listViews>
        <fullName>My_Open_WINs</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>WIN_Name__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_WIN_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Final_Line_Approval_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Open WINs</label>
    </listViews>
    <listViews>
        <fullName>My_WINs</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>WIN_Name__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_WIN_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My WINs</label>
    </listViews>
    <listViews>
        <fullName>Publicly_Cleared_WINs</fullName>
        <columns>NAME</columns>
        <columns>Cleared_For__c</columns>
        <columns>Final_Line_Approval_Date__c</columns>
        <columns>WIN_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cleared_For__c</field>
            <operation>includes</operation>
            <value>Press Use</value>
        </filters>
        <filters>
            <field>Final_Line_Approval_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Publicly Cleared WINs</label>
    </listViews>
    <listViews>
        <fullName>Swanson_EP_WINs_Not_Submitted</fullName>
        <columns>Actual_Create_Date__c</columns>
        <columns>First_Approver__c</columns>
        <columns>Final_Approver__c</columns>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>First_Line_Approval__c</columns>
        <columns>First_Line_Approver__c</columns>
        <columns>Final_Line_Approval__c</columns>
        <columns>Final_Line_Approver__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WIN__c.Export_Promotion,WIN__c.Export_Promotion_Locked</value>
        </filters>
        <filters>
            <field>Actual_Create_Date__c</field>
            <operation>greaterThan</operation>
            <value>6/30/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>Final_Approver__c</field>
            <operation>contains</operation>
            <value>Swanson</value>
        </filters>
        <filters>
            <field>First_Line_Approval__c</field>
            <operation>equals</operation>
        </filters>
        <label>Swanson EP WINs Not Submitted</label>
    </listViews>
    <listViews>
        <fullName>WIN_Type_Blank</fullName>
        <columns>NAME</columns>
        <columns>Calendar_Year_of_Results__c</columns>
        <columns>Final_Line_Approval_Date__c</columns>
        <columns>WIN_Date__c</columns>
        <columns>WIN_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WIN_Type__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Calendar_Year_of_Results__c</field>
            <operation>equals</operation>
            <value>2015,2016</value>
        </filters>
        <label>WIN Type Blank</label>
    </listViews>
    <listViews>
        <fullName>WINs_to_Delete</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>WIN_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_WIN_Removal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>WINs to Delete</label>
    </listViews>
    <nameField>
        <label>WIN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WINs</pluralLabel>
    <recordTypes>
        <fullName>Advocacy</fullName>
        <active>true</active>
        <description>Record type for creating an Advocacy WIN</description>
        <label>Advocacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Advocacy_Locked</fullName>
        <active>true</active>
        <description>Record type used for locking an Advocacy WIN</description>
        <label>Advocacy Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commercial_Diplomacy</fullName>
        <active>true</active>
        <description>Record type for creating a Commercial Diplomacy WIN</description>
        <label>Commercial Diplomacy</label>
    </recordTypes>
</CustomObject>